Implement HTTP 1.1 keep-alive in Service. Add jmx file for benchmarking.